Move to unidata/tomcat-docker